once per commit is good. different upload

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Build and Deploy
 
 on:
-    push:
-        branches:
-            - '*'
     pull_request:
+        branches:
+            - main
 
 jobs:
     build:
@@ -41,8 +40,17 @@ jobs:
                   pyinstaller --onefile --add-data "PICO_CODE;PICO_CODE" --add-data "logo.png;." --icon=icon.ico --name "WarpedPinballProgrammer" main.py
               shell: bash
 
-            - name: Upload executable artifact
-              uses: actions/upload-artifact@v3
+            - name: Upload executable to GitHub Release
+              uses: softprops/action-gh-release@v2
+              if: ${{ github.event_name == 'release' }}
               with:
-                  name: WarpedPinballProgrammer-${{ matrix.os }}
-                  path: dist/WarpedPinballProgrammer${{ matrix.artifact_extension }}
+                  files: dist/WarpedPinballProgrammer${{ matrix.artifact_extension }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Upload executable as artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: WarpedPinballProgrammer${{ matrix.artifact_extension }}
+				
+                
