--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build with PyInstaller
         run: |
-          pyinstaller trenchcoat.spec
+          ./build.sh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
