--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,10 @@ jobs:
         run: |
           ./build.sh
 
+      - name: List files
+        run: |
+          ls dist
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
