--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,13 +35,17 @@ jobs:
       - name: Build with PyInstaller
         run: |
           ./build.sh
-
+      
       - name: List files
         run: |
-          ls dist
+          if [ "${{ runner.os }}" = "Windows" ]; then
+            dir dist
+          else
+            ls -la dist
+          fi
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
-          path: dist/Trenchcoat${{ matrix.ext }}*
+          path: dist/Trenchcoat${{ matrix.ext }}
