--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,20 +32,27 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Build with PyInstaller
+      - name: PyInstaller build
         run: |
-          ./build.sh
-      
-      - name: List files
-        run: |
-          if [ "${{ runner.os }}" = "Windows" ]; then
-            dir dist
-          else
-            ls -la dist
-          fi
+          rm -rf dist build
+          pyinstaller \
+            --onefile \
+            --name TrenchCoat \
+            --hidden-import mpremote \
+            --hidden-import mpremote.main \
+            --hidden-import ipaddress \
+            trenchcoat.py
+
+      - name: List dist on Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: ls -la dist
+
+      - name: List dist on Windows
+        if: matrix.os == 'windows-latest'
+        run: dir dist
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
-          path: dist/Trenchcoat${{ matrix.ext }}
+          path: dist/TrenchCoat${{ matrix.ext }}
