--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,19 +6,9 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            artifact_name: pico-flasher-linux
-            ext: ""
-          - os: windows-latest
-            artifact_name: pico-flasher-windows
-            ext: ".exe"
-
+  build_linux:
+    name: Build on Ubuntu
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
@@ -32,27 +22,59 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: PyInstaller build
+      - name: Build with PyInstaller
         run: |
           rm -rf dist build
-          pyinstaller \
-            --onefile \
+          pyinstaller --onefile \
             --name TrenchCoat \
             --hidden-import mpremote \
             --hidden-import mpremote.main \
             --hidden-import ipaddress \
             trenchcoat.py
 
-      - name: List dist on Linux
-        if: matrix.os == 'ubuntu-latest'
+      - name: List dist folder
         run: ls -la dist
 
-      - name: List dist on Windows
-        if: matrix.os == 'windows-latest'
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pico-flasher-linux
+          path: dist/TrenchCoat  # The single file on Linux
+
+  build_windows:
+    name: Build on Windows
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Build with PyInstaller (Windows)
+        shell: pwsh  # Using PowerShell
+        run: |
+          if (Test-Path dist) {Remove-Item dist -Recurse -Force}
+          if (Test-Path build) {Remove-Item build -Recurse -Force}
+          pyinstaller --onefile ^
+            --name TrenchCoat ^
+            --hidden-import mpremote ^
+            --hidden-import mpremote.main ^
+            --hidden-import ipaddress ^
+            trenchcoat.py
+
+      - name: List dist folder (Windows)
+        shell: pwsh
         run: dir dist
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.artifact_name }}
-          path: dist/TrenchCoat${{ matrix.ext }}
+          name: pico-flasher-windows
+          path: dist/TrenchCoat.exe
