--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,10 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Build
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Build with PyInstaller
-        run: |
           rm -rf dist build
           pyinstaller --onefile \
             --name TrenchCoat \
@@ -54,23 +51,14 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Build
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      
-      - name: Build with PyInstaller (Windows)
-        run: |
           if (Test-Path dist) { Remove-Item dist -Recurse -Force }
           if (Test-Path build) { Remove-Item build -Recurse -Force }
           pyinstaller --onefile --name TrenchCoat --hidden-import mpremote --hidden-import mpremote.main --hidden-import ipaddress --add-data "uf2;uf2" trenchcoat.py
       
-
-      - name: List dist folder (Windows)
-        shell: pwsh
-        run: dir dist
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
