--- a/.github/workflows/publish_python_package.yml
+++ b/.github/workflows/publish_python_package.yml
@@ -1,8 +1,13 @@
 name: Publish Python Package
 
 on:
-  release:
-    types: [created]
+    pull_request:
+        types: [opened, synchronize]
+    release:
+        types: [created]
+
+env:
+    PR_BUILD: ${{ github.event_name == 'pull_request' }}
 
 jobs:
   deploy:
