fix: specify shell for PyInstaller packaging step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
         run: rm -rf dist build
 
       - name: Package with PyInstaller
+        shell: bash
         run: |
           pyinstaller --onefile \
             --name TrenchCoat-${{ matrix.name }} \
