--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Package
+name: Build Binaries
 
 on:
   pull_request:
@@ -21,11 +21,11 @@ jobs:
             name: windows
             add-data: "uf2;uf2"
             ext: ".exe"
-          - os: macos-12
+          - os: macos-13
             name: macos-x64
             add-data: "uf2:uf2"
             ext: ""
-          - os: macos-12-arm64
+          - os: macos-13-arm64
             name: macos-arm64
             add-data: "uf2:uf2"
             ext: ""
