--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,11 @@ jobs:
             name: windows
             add-data: "uf2;uf2"
             ext: ".exe"
-          - os: macos-13
+          - os: macos-15-large
             name: macos-x64
             add-data: "uf2:uf2"
             ext: ""
-          - os: macos-13-arm64
+          - os: macos-15
             name: macos-arm64
             add-data: "uf2:uf2"
             ext: ""
