fix: update macOS version from 15 to 13 in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
             name: windows
             add-data: "uf2;uf2"
             ext: ".exe"
-          - os: macos-15-large
+          - os: macos-13
             name: macos-x64
             add-data: "uf2:uf2"
             ext: ""
